--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ databases:
 
 services:
   - type: web
-    name: minesweeper
+    name: Minesweeper
     runtime: ruby
     plan: free
     buildCommand: "./bin/render-build.sh"
